Correct npm version
