# PlantCare.API/PlantCare.API/Controllers/ModuleController.cs
@@ -3,6 +3,8 @@ using Microsoft.AspNetCore.Mvc;
 using PlantCare.Commands.Commands.Module;
 using PlantCare.Domain.Dto;
 using PlantCare.Domain.Models.Plant;
+using PlantCare.Queries.Queries.Module;
+using PlantCare.Queries.Responses.Module;
 using GetModulesQuery = PlantCare.Queries.Queries.Module.GetModulesQuery;
 
 namespace PlantCare.API.Controllers;
@@ -12,12 +14,10 @@ namespace PlantCare.API.Controllers;
 public class ModuleController : ControllerAuth
 {
     private readonly IMediator _mediator;
-    private readonly ILogger<PlaceController> _logger;
 
     public ModuleController(IHttpContextAccessor httpContextAccessor, IMediator mediator, ILogger<PlaceController> logger) : base(httpContextAccessor, logger)
     {
         _mediator = mediator;
-        _logger = logger;
     }
 
     [HttpPost]
@@ -25,29 +25,39 @@ public class ModuleController : ControllerAuth
     [ProducesResponseType(StatusCodes.Status500InternalServerError, Type = typeof(Exception))]
     public async ValueTask<IActionResult> Create(CreateModuleRequest request)
     {
-        _logger.LogInformation("Create module controller method start processing");
         CreateModuleCommand command = new CreateModuleCommand()
         {
             Name = request.Name,
             UserId = UserId
         };
         var result = await _mediator.Send(command);
-        _logger.LogInformation("Create module controller method ends processing");
         return result.ToOk();
     }
     
     [HttpGet]
-    [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(List<IPlant>))]
+    [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(List<GetModuleResponse>))]
     [ProducesResponseType(StatusCodes.Status500InternalServerError, Type = typeof(Exception))]
     public async ValueTask<IActionResult> Get()
     {
-        _logger.LogInformation("GetAll modules controller method start processing");
         var getModulesQuery = new GetModulesQuery()
         {
             UserId = UserId
         };
         var result = await _mediator.Send(getModulesQuery);
-        _logger.LogInformation("GetAll modules controller method ends processing");
+        return result.ToOk();
+    }
+    
+    [HttpGet("/id/{id:int}")]
+    [ProducesResponseType(StatusCodes.Status200OK, Type = typeof(GetModuleResponse))]
+    [ProducesResponseType(StatusCodes.Status500InternalServerError, Type = typeof(Exception))]
+    public async ValueTask<IActionResult> GetModuleById(int id)
+    {
+        var getModulesQuery = new GetModuleByIdQuery()
+        {
+            UserId = UserId,
+            ModuleId = id
+        };
+        var result = await _mediator.Send(getModulesQuery);
         return result.ToOk();
     }
 }
